[pacman][synloc] Update pacman-mirrorlist-gen and synloc-nominatim.
- pacman-mirrorlist-gen now relies on synloc-nominatim instead of
  synloc-addr
- synloc-nominatim now dumps the address field only

--- a/home/dot_config/systemd/user/pacman-mirrorlist-gen.path.tmpl
+++ b/home/dot_config/systemd/user/pacman-mirrorlist-gen.path.tmpl
@@ -3,5 +3,4 @@ Description=Pacman Mirrorlist Generator When Required
 
 [Path]
 PathChanged={{ .chezmoi.homeDir }}/.config/pacman/mirrors.yaml
-PathChanged={{ .chezmoi.homeDir }}/.config/synloc/city
-PathChanged={{ .chezmoi.homeDir }}/.config/synloc/country
+PathChanged={{ .chezmoi.homeDir }}/.config/synloc/nominatim
