[clash] Update clash-gen; enable authentication.

--- a/home/dot_config/systemd/user/clash-gen.path.tmpl
+++ b/home/dot_config/systemd/user/clash-gen.path.tmpl
@@ -1,7 +1,10 @@
 [Unit]
-Description=Clash Config Generator When Required
+Description=Automatic Clash Config Generator
 
 [Path]
-PathChanged={{ .chezmoi.homeDir }}/.config/clash/proxies.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/settings.yaml
+PathChanged={{ .chezmoi.homeDir }}/.config/clash/proxies.yaml
+PathChanged={{ .chezmoi.homeDir }}/.config/clash/proxy-groups.yaml
+PathChanged={{ .chezmoi.homeDir }}/.config/clash/rules.yaml
+PathChanged={{ .chezmoi.homeDir }}/.config/clash/auth.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/secret
