[clash][ssh] Rename auth.yaml to auth; add SSH proxy config.

--- a/home/dot_config/systemd/user/clash-gen.path.tmpl
+++ b/home/dot_config/systemd/user/clash-gen.path.tmpl
@@ -6,5 +6,5 @@ PathChanged={{ .chezmoi.homeDir }}/.config/clash/settings.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/proxies.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/proxy-groups.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/rules.yaml
-PathChanged={{ .chezmoi.homeDir }}/.config/clash/auth.yaml
+PathChanged={{ .chezmoi.homeDir }}/.config/clash/auth
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/secret
