--- a/home/dot_config/systemd/user/default.target.wants/symlink_clash-localhost.service.tmpl
+++ b/home/dot_config/systemd/user/default.target.wants/symlink_clash-localhost.service.tmpl
@@ -1,3 +1,3 @@
-{{ if not (eq "lipid" .cys.hostname) -}}
+{{ if (and (eq .chezmoi.os "linux") (not (eq .cys.hostname "lipid"))) -}}
 ../clash-localhost.service
 {{ end -}}
