--- a/home/dot_config/alacritty/alacritty.toml.tmpl
+++ b/home/dot_config/alacritty/alacritty.toml.tmpl
@@ -1,3 +1,4 @@
+{{ if not (eq .cys.desktop "") -}}
 [font]
 size = 9.5
 
@@ -42,3 +43,4 @@ multiplier = 6
 {{- else -}}
 multiplier = 10
 {{- end }}
+{{ end -}}
