[clash] Add settings-private.yaml to systemd path unit.

--- a/home/dot_config/systemd/user/clash-gen.path.tmpl
+++ b/home/dot_config/systemd/user/clash-gen.path.tmpl
@@ -3,6 +3,7 @@ Description=Automatic Clash Config Generator
 
 [Path]
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/settings.yaml
+PathChanged={{ .chezmoi.homeDir }}/.config/clash/settings-private.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/proxies.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/proxy-groups.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash/rules.yaml
