[clash][systemd] Fix clash-localhost-gen.path

--- a/home/dot_config/systemd/user/clash-localhost-gen.path.tmpl
+++ b/home/dot_config/systemd/user/clash-localhost-gen.path.tmpl
@@ -3,6 +3,7 @@ Description=Automatic Clash Config Generator
 
 [Path]
 PathChanged={{ .chezmoi.homeDir }}/.config/clash-localhost/settings.yaml
+PathChanged={{ .chezmoi.homeDir }}/.config/clash-localhost/settings-private.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash-localhost/proxies.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash-localhost/proxy-groups.yaml
 PathChanged={{ .chezmoi.homeDir }}/.config/clash-localhost/rules.yaml
