[sh] Switch to a dynamic approach to environmental variables.

--- a/home/dot_config/systemd/user/clash-localhost-gen.path.tmpl
+++ b/home/dot_config/systemd/user/clash-localhost-gen.path.tmpl
@@ -1,5 +1,6 @@
 [Unit]
 Description=Automatic Clash Config Generator
+After=envvar-setting.target
 
 [Path]
 PathChanged={{ .chezmoi.homeDir }}/.config/clash-localhost/settings.yaml
