--- a/home/dot_config/systemd/user/clash-dashboard.service.tmpl
+++ b/home/dot_config/systemd/user/clash-dashboard.service.tmpl
@@ -2,12 +2,9 @@
 
 [Unit]
 Description=Clash Dashboard
-After=clash.target
+After=envvar-setting.target clash.target
 
 [Service]
 Type=exec
 Restart=on-abort
 ExecStart=/usr/bin/env -C {{ .chezmoi.homeDir }}/.local/share/clash-dashboard python3 -m http.server --bind localhost 3000
-
-[Install]
-WantedBy=default.target
