--- a/home/dot_config/systemd/user/pacman-mirrorlist-gen.path.tmpl
+++ b/home/dot_config/systemd/user/pacman-mirrorlist-gen.path.tmpl
@@ -1,5 +1,6 @@
 [Unit]
 Description=Pacman Mirrorlist Generator When Required
+After=envvar-setting.target
 
 [Path]
 PathChanged={{ .chezmoi.homeDir }}/.config/pacman/mirrors.yaml
