--- a/home/dot_config/systemd/user/synloc-nominatim.path.tmpl
+++ b/home/dot_config/systemd/user/synloc-nominatim.path.tmpl
@@ -2,7 +2,7 @@
 
 [Unit]
 Description=automatic Nominatim location update
-After=network-wait-online.target
+After=envvar-setting.target network-wait-online.target
 
 [Path]
 PathChanged={{ .chezmoi.homeDir }}/.config/synloc/latitude
