[emacs] Add support for MathJax formula rendering.

--- a/home/private_Library/LaunchAgents/run_onchange_after_yml_to_plist.sh.tmpl
+++ b/home/private_Library/LaunchAgents/run_onchange_after_yml_to_plist.sh.tmpl
@@ -19,3 +19,5 @@ to_plist ~/Library/LaunchAgents/private.profile
 to_plist ~/Library/LaunchAgents/private.emacs
 # {{ include "private_Library/LaunchAgents/private.clash.yml.tmpl" | sha256sum }}
 to_plist ~/Library/LaunchAgents/private.clash
+# {{ include "private_Library/LaunchAgents/private.math2svg.yml.tmpl" | sha256sum }}
+to_plist ~/Library/LaunchAgents/private.math2svg
